src/test/deca/syntax/invalid/printlnx_variable.synt
printlnx_variable.deca:11: